<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		landing_
	 *	@date 		Monday 10th of April 2023 08:31:46 PM
	 *	@title 		Designs
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/landing_" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_landing__ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__landing__ek2"
					android:background="@drawable/_bg__landing__ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="375dp"
					android:layout_height="812dp" />

				<TextView android:id="@+id/sign_in_and_start_your_airmed_experience"
					android:fontFamily="DM Sans"
					android:textStyle="bold"
					android:textSize="36sp"
					android:textColor="@color/sign_in_and_start_your_airmed_experience_color"
					android:layout_marginLeft="40dp"
					android:layout_marginTop="525dp"
					android:layout_width="376dp"
					android:layout_height="197dp"
					android:text="@string/sign_in_and_start_your_airmed_experience_string"
					 />


				<RelativeLayout android:id="@+id/group_10"
					android:layout_marginTop="711dp"
					android:layout_marginStart="279dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/ellipse_1"
						android:background="@drawable/ellipse_1_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="56dp"
						android:layout_height="56dp" />


					<RelativeLayout android:id="@+id/right"
						android:layout_marginTop="13dp"
						android:layout_marginStart="13dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>


						<RelativeLayout android:id="@+id/group"
							android:layout_marginTop="5dp"
							android:layout_marginStart="2.5dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<ImageView android:id="@+id/vector"
								android:src="@drawable/vector"
								android:contentDescription="vector"
								 android:layout_marginStart="0dp"
								android:layout_marginTop="0dp"
								android:layout_width="25dp"
								android:layout_height="20dp" />

						</RelativeLayout>

					</RelativeLayout>

				</RelativeLayout>


				<RelativeLayout android:id="@+id/group_223"
					android:layout_marginTop="243dp"
					android:layout_marginStart="48dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>


					<RelativeLayout android:id="@+id/group_221"
						android:layout_marginTop="0dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>


						<RelativeLayout android:id="@+id/group_2"
							android:layout_marginTop="191dp"
							android:layout_marginStart="1dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<View   android:id="@+id/rectangle_5"
								android:background="@drawable/rectangle_5_shape"
								 android:layout_marginStart="0dp"
								android:layout_marginTop="0dp"
								android:layout_width="272.19dp"
								android:layout_height="50.03dp" />

						</RelativeLayout>

						<View   android:id="@+id/rectangle_7"
							android:background="@drawable/rectangle_7_shape"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="271.04dp"
							android:layout_height="47.83dp" />

						<View   android:id="@+id/rectangle_8"
							android:background="@drawable/rectangle_8_shape"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="94dp"
							android:layout_width="271.04dp"
							android:layout_height="47.83dp" />


						<RelativeLayout android:id="@+id/group_218"
							android:layout_marginTop="111dp"
							android:layout_marginStart="233dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<ImageView android:id="@+id/vector_ek1"
								android:src="@drawable/vector_ek1"
								android:contentDescription="vector_ek1"
								 android:layout_marginStart="0dp"
								android:layout_marginTop="0dp"
								android:layout_width="18.76dp"
								android:layout_height="16.58dp" />

							<ImageView android:id="@+id/vector_ek2"
								android:src="@drawable/vector_ek2"
								android:contentDescription="vector_ek2"
								 android:layout_marginStart="8dp"
								android:layout_marginTop="7dp"
								android:layout_width="5.14dp"
								android:layout_height="5.14dp" />

						</RelativeLayout>

						<TextView android:id="@+id/usu_rio"
							android:fontFamily="Raleway"
							android:textSize="15sp"
							android:textColor="@color/rectangle_5_color"
							android:layout_marginLeft="19dp"
							android:layout_marginTop="16dp"
							android:layout_width="80.52dp"
							android:layout_height="31.13dp"
							android:text="@string/usu_rio_string"
							 />

						<TextView android:id="@+id/senha"
							android:fontFamily="Raleway"
							android:textSize="15sp"
							android:textColor="@color/rectangle_5_color"
							android:layout_marginLeft="17dp"
							android:layout_marginTop="107dp"
							android:layout_width="70.21dp"
							android:layout_height="31.13dp"
							android:text="@string/senha_string"
							 />


						<RelativeLayout android:id="@+id/person_24px"
							android:layout_marginTop="10dp"
							android:layout_marginStart="231dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<ImageView android:id="@+id/icon_social_person_24px"
								android:src="@drawable/icon_social_person_24px"
								android:contentDescription="icon_social_person_24px"
								 android:layout_marginStart="3.75dp"
								android:layout_marginTop="3.88dp"
								android:layout_width="15.01dp"
								android:layout_height="15.52dp" />

						</RelativeLayout>

					</RelativeLayout>

					<TextView android:id="@+id/entrar"
						android:fontFamily="Roboto"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="13sp"
						android:textColor="@color/rectangle_5_color"
						android:layout_marginLeft="55dp"
						android:layout_marginTop="206dp"
						android:layout_width="170.25dp"
						android:layout_height="27.51dp"
						android:text="@string/entrar_string"
						 />

				</RelativeLayout>

				<TextView android:id="@+id/ecocycle"
					android:fontFamily="Raleway"
					android:textSize="64sp"
					android:textColor="@color/ecocycle_color"
					android:layout_marginLeft="25dp"
					android:layout_marginTop="107dp"
					android:layout_width="393dp"
					android:layout_height="120dp"
					android:text="@string/ecocycle_string"
					 />

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>